# oci-extractor

./: Cargo.toml  DEVELOPMENT.md  README.md
src/: copy.rs  lib.rs  main.rs  unpacker.rs
src/spec/: config.rs  descriptor.rs  digest.rs  index.rs  layout.rs  manifest.rs  manifestv1.rs  media_types.rs  mod.rs
