[package]
name = "oci-extractor"
version = "0.1.0"
authors = ["Benny Zlotnik <bzlotnik@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sha2 = "0.9.8"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.5"
tar = "0.4.37"
flate2 = "1.0.22"
oci-spec = "0.5.2"
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1.13.0", features = ["full"] }
